<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskActivity"
    >

    <TextView
        android:id="@+id/newTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="150dp"
        android:text="@string/newTittle"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTittleText"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:hint="@string/titleHint"
        android:background="@drawable/custom_input"
        android:paddingStart="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newTittle" />

    <TextView
        android:id="@+id/newDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/newDescription"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTittleText" />

    <EditText
        android:id="@+id/editDescriptionText"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:hint="@string/descriptionHint"
        android:background="@drawable/custom_input"
        android:paddingStart="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newDescription" />

    <TextView
        android:id="@+id/newDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/newDate"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDescriptionText" />

    <EditText
        android:id="@+id/editNewDate"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:hint="@string/dateHint"
        android:drawableEnd="@drawable/ic_baseline_date_range_24"
        android:background="@drawable/custom_input"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newDate" />

    <LinearLayout
        android:layout_width="332dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="36dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/saveTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Save"
            android:onClick="saveTask"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>